tests/istio_testcases/example_policies/complex-ingress-test/aaaa-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-aaaa
  namespace: example
spec:
  selector:
    matchLabels:
      app: aaaa
  replicas: 2
  template:
    metadata:
      labels:
        app: aaaa
