tests/istio_testcases/example_policies/complex-ingress-test/aaaa-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-aaaa
  namespace: example
  labels:
    app: aaaa
spec:
  type: ClusterIP
  ports:
  - name: serviceport
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: aaaa
