tests/istio_testcases/example_policies/complex-ingress-test/complex-k8s-ingress-test-scheme.yaml
resourceList:
  - resources/

networkConfigList:
  - name: complex-k8s-ingress-test
    namespaceList:
      - ./added_resources/
      - ./resources
    podList:
      - ./added_resources/
      - ./resources
    networkPolicyList:
      - ./resources/ingress.yaml
      - ./resources/ingress2.yaml
    expectedWarnings: 0

  - name: complex-k8s-ingress-test-missing-resources
    namespaceList:
      - ./resources
    podList:
      - ./resources
    networkPolicyList:
      - ./resources/ingress.yaml
    expectedWarnings: 0

  - name: complex-k8s-ingress-test-missing-resources
    namespaceList:
      - ./resources
    podList:
      - ./resources
    networkPolicyList:
      - ./resources/ingress.yaml
    expectedWarnings: 0


queries:
  - name: connectivity
    connectivityMap:
      - complex-k8s-ingress-test
    outputConfiguration:
      outputFormat: dot
      fwRulesRunInTestMode: false
    expectedOutput: ../../expected_output/complex-k8s-ingress-test-connectivity-map.dot

  # test with livesim
  - name: connectivity-2
    connectivityMap:
      - complex-k8s-ingress-test-missing-resources
    outputConfiguration:
      outputFormat: dot
      fwRulesRunInTestMode: false
    expectedOutput: ../../expected_output/complex-k8s-ingress-test-connectivity-map-with-missing-resources.dot
