tests/istio_testcases/example_policies/complex-ingress-test/ffff-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-ffff
  namespace: example
spec:
  selector:
    matchLabels:
      app: ffff
  replicas: 2
  template:
    metadata:
      labels:
        app: ffff
