tests/istio_testcases/example_policies/complex-ingress-test/gggg-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-gggg
  namespace: example
spec:
  selector:
    matchLabels:
      app: gggg
  replicas: 2
  template:
    metadata:
      labels:
        app: gggg
