tests/istio_testcases/example_policies/complex-ingress-test/ingress-nginx-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-ingress-nginx
  namespace: example
  labels:
    app: ingress-nginx
spec:
  type: ClusterIP
  ports:
  - name: serviceport
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: ingress-nginx
